tests/snapshots/uf5-218_first_10/tests__uf50-010.snap
---
source: tests/tests.rs
info:
  program: vine
  args:
    - run
    - dpll/main.vi
    - "--breadth-first"
---
success: true
exit_code: 0
----- stdout -----
satisfiable
evaluation under model: true
var 1 = false
var 2 = true
var 3 = true
var 4 = false
var 5 = true
var 6 = true
var 7 = true
var 8 = true
var 10 = false
var 11 = true
var 12 = true
var 13 = true
var 14 = false
var 15 = true
var 16 = false
var 17 = false
var 18 = true
var 19 = true
var 20 = true
var 21 = false
var 22 = false
var 23 = true
var 24 = false
var 25 = true
var 26 = true
var 28 = false
var 29 = false
var 30 = true
var 31 = true
var 32 = false
var 33 = true
var 34 = false
var 35 = true
var 36 = false
var 37 = false
var 38 = false
var 39 = false
var 41 = false
var 42 = false
var 43 = false
var 44 = false
var 45 = false
var 46 = true
var 47 = true
var 48 = true
var 49 = true
var 50 = true

----- stderr -----

Interactions
  Total           16_982_518
    Depth          8_655_189
    Breadth                1
  Annihilate       9_557_910
  Commute             35_572
  Copy             1_644_404
  Erase            1_952_776
  Expand           1_344_626
  Call             1_548_906
  Branch             898_324

Memory
  Heap               617_408 B
  Allocated      376_039_424 B
  Freed          376_039_424 B

[Performance...]
