tests/snapshots/uf5-218_first_10/tests__uf50-01_stderr.snap
---
source: tests/tests.rs
expression: stderr
---
Interactions
  Total           22_211_588
  Annihilate      12_504_443
  Commute             44_342
  Copy             2_104_035
  Erase            2_556_894
  Expand           1_786_070
  Call             2_048_453
  Branch           1_167_351

Parallelism
  Depth            9_754_684
  Breadth                  2
  Speedup                 36 cB

Memory
  Heap               544_144 B
  Allocated      492_081_744 B
  Freed          492_081_744 B

[Performance...]
