tests/snapshots/uf5-218_first_10/tests__uf50-01_stdout.snap
---
source: tests/tests.rs
expression: stdout
---
satisfiable
evaluation under model: true
var 1 = false
var 2 = true
var 3 = false
var 4 = true
var 5 = true
var 6 = true
var 7 = true
var 8 = true
var 9 = true
var 10 = false
var 11 = false
var 12 = true
var 13 = false
var 14 = true
var 15 = false
var 16 = false
var 17 = false
var 18 = false
var 19 = true
var 20 = true
var 21 = false
var 22 = false
var 23 = true
var 24 = false
var 25 = false
var 26 = false
var 27 = true
var 28 = false
var 29 = false
var 30 = false
var 31 = false
var 32 = false
var 33 = false
var 34 = false
var 35 = true
var 36 = true
var 37 = true
var 38 = false
var 39 = true
var 40 = false
var 41 = false
var 43 = false
var 44 = false
var 45 = false
var 46 = false
var 47 = false
var 48 = true
var 49 = true
var 50 = false
