tests/snapshots/uf5-218_first_10/tests__uf50-02.snap
---
source: tests/tests.rs
info:
  program: vine
  args:
    - run
    - dpll/main.vi
    - "--breadth-first"
---
success: true
exit_code: 0
----- stdout -----
satisfiable
evaluation under model: true
var 1 = false
var 2 = true
var 3 = true
var 4 = false
var 5 = false
var 6 = true
var 7 = false
var 8 = false
var 9 = true
var 10 = true
var 11 = true
var 12 = false
var 13 = true
var 14 = true
var 15 = true
var 16 = true
var 17 = false
var 18 = true
var 19 = true
var 20 = false
var 21 = true
var 22 = true
var 23 = true
var 24 = false
var 25 = false
var 26 = true
var 27 = false
var 28 = false
var 29 = true
var 30 = false
var 31 = true
var 32 = false
var 33 = false
var 34 = true
var 35 = false
var 36 = true
var 37 = true
var 38 = true
var 39 = false
var 40 = false
var 41 = false
var 42 = true
var 43 = false
var 44 = true
var 45 = true
var 46 = false
var 47 = true
var 48 = true
var 49 = false
var 50 = false

----- stderr -----

Interactions
  Total           85_095_290
    Depth         37_050_578
    Breadth                2
  Annihilate      48_250_598
  Commute            158_564
  Copy             7_997_733
  Erase            9_663_529
  Expand           6_774_387
  Call             7_791_469
  Branch           4_459_010

Memory
  Heap               666_128 B
  Allocated    1_893_621_856 B
  Freed        1_893_621_856 B

[Performance...]
