tests/snapshots/uf5-218_first_10/tests__uf50-02_stderr.snap
---
source: tests/tests.rs
expression: stderr
---
Interactions
  Total           84_780_112
    Depth         36_770_768
    Breadth                2
  Annihilate      47_755_592
  Commute            163_068
  Copy             8_001_415
  Erase            9_779_374
  Expand           6_830_912
  Call             7_790_249
  Branch           4_459_502

Memory
  Heap               669_712 B
  Allocated    1_877_968_480 B
  Freed        1_877_968_480 B

[Performance...]
