tests/snapshots/uf5-218_first_10/tests__uf50-03.snap
---
source: tests/tests.rs
info:
  program: vine
  args:
    - run
    - sat/main.vi
    - "--breadth-first"
---
success: true
exit_code: 0
----- stdout -----
satisfiable
evaluation under model: true
var 1 = true
var 2 = true
var 3 = false
var 4 = true
var 5 = true
var 6 = false
var 7 = false
var 8 = true
var 9 = false
var 10 = true
var 11 = true
var 12 = true
var 13 = true
var 14 = true
var 15 = true
var 16 = false
var 17 = true
var 18 = true
var 19 = true
var 20 = true
var 21 = false
var 22 = false
var 23 = true
var 24 = true
var 25 = true
var 26 = false
var 27 = false
var 28 = true
var 29 = false
var 30 = true
var 31 = true
var 32 = true
var 34 = true
var 35 = false
var 36 = false
var 37 = true
var 38 = false
var 39 = true
var 40 = false
var 42 = true
var 43 = true
var 44 = false
var 45 = false
var 46 = false
var 47 = false
var 48 = true
var 49 = true
var 50 = true

----- stderr -----

Interactions
  Total            3_868_011
    Depth          1_742_720
    Breadth                2
  Annihilate       2_142_478
  Commute             20_887
  Copy               416_289
  Erase              445_332
  Expand             290_758
  Call               354_373
  Branch             197_894

Memory
  Heap               554_800 B
  Allocated       85_965_392 B
  Freed           85_965_392 B

[Performance...]
